--- a/presentation.html
+++ b/presentation.html
@@ -393,7 +393,7 @@
 
                     <div className="w-full h-14 md:h-16 bg-white border-t border-slate-200 flex items-center justify-between px-6 md:px-12 z-50 shadow-lg shrink-0">
                         <div className="flex items-center gap-4">
-                            <span className="font-bold text-slate-800 tracking-tight text-base md:text-xl">區塊勢 <span className="text-slate-300 mx-2">|</span> 許明恩</span>
+                            <span className="font-bold text-slate-800 tracking-tight text-base md:text-xl">區塊勢 <span className="text-slate-300 mx-2">×</span> Dinngo</span>
                         </div>
                         <div className="flex items-center gap-6">
                             <button onClick={prevSlide} disabled={currentSlide === 0}
