--- a/presentation.html
+++ b/presentation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>加密貨幣在搞什麼鬼？ | 區塊勢 許明恩</title>
+    <title>企業 Web3 實戰工作坊 | 區塊勢 × Dinngo</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -46,8 +46,8 @@
             {
                 id: 1,
                 layout: 'cover',
-                title: "加密貨幣在搞什麼鬼？",
-                subtitle: "用白話拆解加密貨幣",
+                title: "企業 Web3 實戰工作坊",
+                subtitle: "加密貨幣在搞什麼鬼？用白話拆解加密貨幣",
                 desc: "加入 Slido 互動：活動代碼 #tax1023",
                 footer: "區塊勢 × Dinngo"
             },
