--- a/presentation.html
+++ b/presentation.html
@@ -49,7 +49,7 @@
                 title: "企業 Web3 實戰工作坊",
                 subtitle: "加密貨幣在搞什麼鬼？用白話拆解加密貨幣",
                 slidoUrl: "https://app.sli.do/event/v5E2ZdcCzhE9FHG2EfHh7z",
-                slidoCode: "tax1023",
+                slidoCode: "web3",
                 footer: "區塊勢 × Dinngo"
             },
             {
