--- a/presentation.html
+++ b/presentation.html
@@ -324,7 +324,7 @@
                                 {slide.slidoUrl && (
                                     <div className="flex flex-col md:flex-row items-center justify-center gap-6 md:gap-8 p-6 bg-white rounded-2xl shadow-md border border-slate-100">
                                         <a href={slide.slidoUrl} target="_blank" rel="noopener noreferrer" className="inline-flex items-center gap-3 px-8 py-4 bg-indigo-600 hover:bg-indigo-700 text-white font-bold text-lg md:text-xl rounded-full shadow-lg transition-all hover:scale-105">
-                                            加入 Slido 互動 →
+                                            即時匿名提問 →
                                         </a>
                                         <div className="flex flex-col items-center gap-2">
                                             <img src={`https://api.qrserver.com/v1/create-qr-code/?size=100x100&data=${encodeURIComponent(slide.slidoUrl)}`} alt="Slido QR" className="w-[100px] h-[100px] rounded-lg" />
