--- a/info.html
+++ b/info.html
@@ -19,7 +19,18 @@
             <p class="text-lg text-slate-500">企業 Web3 實戰工作坊 · 區塊勢 × Dinngo</p>
         </header>
 
-        <!-- Wi-Fi 資訊（最常用，放最上面） -->
+        <!-- 場地資訊（置頂） -->
+        <section class="bg-amber-50 rounded-2xl shadow-sm border border-amber-200 p-6 md:p-8 mb-6">
+            <h2 class="flex items-center gap-3 text-xl font-bold text-slate-800 mb-4 border-l-4 border-amber-500 pl-4">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+                今日場地
+            </h2>
+            <p class="text-2xl font-bold text-slate-900 mb-2">集思台大會議中心 · 尼采廳（B1）</p>
+            <p class="text-slate-600 mb-4">臺北市羅斯福路四段 85 號 B1 · 階梯型會議空間 41.4 坪 · 教室型 48 人</p>
+            <p class="text-sm text-slate-500">捷運松山新店線「公館站」2 號出口左轉，步行約 2 分鐘 · 停車：台大公館二活停車場</p>
+        </section>
+
+        <!-- Wi-Fi 網路 -->
         <section class="bg-white rounded-2xl shadow-sm border border-slate-200 p-6 md:p-8 mb-6">
             <h2 class="flex items-center gap-3 text-xl font-bold text-slate-800 mb-4 border-l-4 border-amber-500 pl-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d="M5 12.55a11 11 0 0 1 14.08 0"/><path d="M1.42 9a16 16 0 0 1 21.16 0"/><path d="M8.53 16.11a6 6 0 0 1 6.95 0"/><circle cx="12" cy="20" r="1"/></svg>
@@ -35,6 +46,7 @@
                     <p class="text-xl font-mono font-bold text-slate-800">請向工作人員索取</p>
                 </div>
             </div>
+            <p class="text-sm text-slate-500 mt-3">會議中心聯絡：(02) 3366-5006～5012</p>
         </section>
 
         <!-- 今日時間表 -->
@@ -116,16 +128,23 @@
             </h2>
             <div class="space-y-4">
                 <div class="p-4 bg-slate-50 rounded-xl border border-slate-100">
-                    <p class="text-sm text-slate-500 mb-1">場地地址</p>
-                    <p class="font-bold text-slate-800">請向工作人員確認</p>
+                    <p class="text-sm text-slate-500 mb-1">地址</p>
+                    <p class="font-bold text-slate-800">臺北市大安區羅斯福路四段 85 號 B1</p>
+                    <p class="text-slate-600 text-sm mt-1">公館水源市場對面，近羅斯福路與基隆路交叉口</p>
                 </div>
                 <div class="p-4 bg-slate-50 rounded-xl border border-slate-100">
-                    <p class="text-sm text-slate-500 mb-1">廁所位置</p>
-                    <p class="font-bold text-slate-800">請向工作人員確認</p>
+                    <p class="text-sm text-slate-500 mb-1">交通</p>
+                    <p class="font-bold text-slate-800">捷運公館站 2 號出口左轉，步行 2 分鐘</p>
+                    <p class="text-slate-600 text-sm mt-1">公車：254、0南、1、208、236、251、278、284、290 等至「捷運公館站」</p>
+                    <p class="text-slate-600 text-sm mt-1">開車：台大公館二活停車場</p>
                 </div>
                 <div class="p-4 bg-slate-50 rounded-xl border border-slate-100">
-                    <p class="text-sm text-slate-500 mb-1">茶水區</p>
-                    <p class="font-bold text-slate-800">請向工作人員確認</p>
+                    <p class="text-sm text-slate-500 mb-1">廁所</p>
+                    <p class="font-bold text-slate-800">B1 樓層走廊旁</p>
+                </div>
+                <div class="p-4 bg-slate-50 rounded-xl border border-slate-100">
+                    <p class="text-sm text-slate-500 mb-1">尼采廳設施</p>
+                    <p class="text-slate-600">完全無樑柱階梯式空間 · 120 吋投影布幕 · 無線麥克風 · 白板</p>
                 </div>
             </div>
         </section>
@@ -139,11 +158,19 @@
             <div class="space-y-4">
                 <div class="p-4 bg-amber-50 rounded-xl border border-amber-100">
                     <p class="font-bold text-slate-800 mb-2">午餐安排</p>
-                    <p class="text-slate-600">12:00–13:00 為午餐時間，請自行前往附近用餐。</p>
+                    <p class="text-slate-600">12:00–13:00 為午餐時間，請自行前往公館商圈用餐。</p>
                 </div>
                 <div class="p-4 bg-slate-50 rounded-xl border border-slate-100">
-                    <p class="font-bold text-slate-800 mb-2">附近餐飲</p>
-                    <p class="text-slate-600">請向工作人員索取附近餐廳推薦或地圖。</p>
+                    <p class="font-bold text-slate-800 mb-2">附近餐飲（步行 2–5 分鐘）</p>
+                    <ul class="text-slate-600 space-y-2">
+                        <li><strong>水源市場</strong> — 美食街，各式小吃</li>
+                        <li><strong>藍家割包</strong> — 羅斯福路三段 316 巷，米其林必比登推薦</li>
+                        <li><strong>大福利排骨大王</strong> — 羅斯福路三段 286 巷，排骨便當</li>
+                        <li><strong>小鹿亭</strong> — 日式咖哩、丼飯、烏龍麵，90 元起</li>
+                        <li><strong>大盛豬豬排專門店</strong> — 羅斯福路四段 52 巷，厚實豬排</li>
+                        <li><strong>泰街頭</strong> — 溫州街，泰式料理</li>
+                    </ul>
+                    <p class="text-slate-500 text-sm mt-2">公館商圈餐廳多在 200 元有找，選擇多元</p>
                 </div>
             </div>
         </section>
