--- a/info.html
+++ b/info.html
@@ -147,6 +147,10 @@
                     <p class="text-slate-600">完全無樑柱階梯式空間 · 120 吋投影布幕 · 無線麥克風 · 白板</p>
                 </div>
             </div>
+            <div class="mt-6">
+                <h3 class="text-lg font-bold text-slate-700 mb-3">場地示意圖</h3>
+                <img src="https://duk.tw/WQzLj0.png" alt="集思台大會議中心尼采廳平面圖" class="w-full max-w-2xl rounded-lg shadow-md border border-slate-200">
+            </div>
         </section>
 
         <!-- 午餐與附近餐飲 -->
