fix: 課程投影片連結改為 index.html
Made-with: Cursor

--- a/info.html
+++ b/info.html
@@ -211,7 +211,7 @@
 
         <!-- 連結到投影片 -->
         <div class="text-center mt-8">
-            <a href="presentation.html" class="inline-flex items-center gap-2 px-8 py-4 bg-amber-500 hover:bg-amber-600 text-white font-bold rounded-full shadow-lg transition-all hover:scale-105">
+            <a href="index.html" class="inline-flex items-center gap-2 px-8 py-4 bg-amber-500 hover:bg-amber-600 text-white font-bold rounded-full shadow-lg transition-all hover:scale-105">
                 進入課程投影片 →
             </a>
         </div>
