--- a/presentation.html
+++ b/presentation.html
@@ -408,7 +408,7 @@
                                 </a>
                             )}
                             <span className="text-slate-300">|</span>
-                            <span className="font-bold text-slate-800 tracking-tight text-sm md:text-xl">區塊勢 <span className="text-slate-300 mx-2">×</span> Dinngo</span>
+                            <span className="font-bold text-slate-800 tracking-tight text-sm md:text-xl">區塊勢 <span className="text-slate-300 mx-2">×</span> <a href="https://furucombo.app/" target="_blank" rel="noopener noreferrer" className="text-slate-800 hover:text-amber-600 hover:underline">Dinngo</a></span>
                         </div>
                         <div className="flex items-center gap-6">
                             <button onClick={prevSlide} disabled={currentSlide === 0}
