--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="#2563eb" strokeWidth="1.5" strokeLinecap="round" strokeLinejoin="round"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
         );
 
+        const DinngoLink = () => React.createElement('a', { href: 'https://furucombo.app/', target: '_blank', rel: 'noopener noreferrer', className: 'text-slate-800 hover:text-amber-600 hover:underline' }, 'Dinngo');
+
         const slides = [
             {
                 id: 1,
@@ -416,7 +418,7 @@
                                 </a>
                             )}
                             <span className="text-slate-300">|</span>
-                            <span className="font-bold text-slate-800 tracking-tight text-sm md:text-xl">區塊勢 <span className="text-slate-300 mx-2">×</span> <a href="https://furucombo.app/" target="_blank" rel="noopener noreferrer" className="text-slate-800 hover:text-amber-600 hover:underline">Dinngo</a></span>
+                            <span className="font-bold text-slate-800 tracking-tight text-sm md:text-xl">區塊勢 <span className="text-slate-300 mx-2">×</span> <DinngoLink /></span>
                         </div>
                         <div className="flex items-center gap-6">
                             <button onClick={prevSlide} disabled={currentSlide === 0}
