revert: 移除 Dinngo 連結，恢復純文字
Made-with: Cursor

--- a/info.html
+++ b/info.html
@@ -16,7 +16,7 @@
         <header class="text-center mb-12">
             <span class="inline-block bg-amber-100 text-amber-800 py-2 px-4 rounded-full text-sm font-bold tracking-wide uppercase mb-4">Workshop Info</span>
             <h1 class="text-3xl md:text-4xl font-bold text-slate-900 mb-2">今日活動資訊</h1>
-            <p class="text-lg text-slate-500">企業 Web3 實戰工作坊 · 區塊勢 × <a href="https://furucombo.app/" target="_blank" rel="noopener" class="text-slate-600 hover:text-amber-600 hover:underline">Dinngo</a></p>
+            <p class="text-lg text-slate-500">企業 Web3 實戰工作坊 · 區塊勢 × Dinngo</p>
         </header>
 
         <!-- 場地資訊（置頂） -->
@@ -217,7 +217,7 @@
         </div>
 
         <footer class="text-center mt-12 text-slate-400 text-sm">
-            區塊勢 × <a href="https://furucombo.app/" target="_blank" rel="noopener" class="text-slate-400 hover:text-amber-500 hover:underline">Dinngo</a> | blocktrend.today
+            區塊勢 × Dinngo | blocktrend.today
         </footer>
     </div>
 </body>
