--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>今日活動資訊 | 企業 Web3 實戰工作坊</title>
+    <title>活動資訊 | 企業 Web3 實戰工作坊</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -15,16 +15,16 @@
         <!-- 標題 -->
         <header class="text-center mb-12">
             <span class="inline-block bg-amber-100 text-amber-800 py-2 px-4 rounded-full text-sm font-bold tracking-wide uppercase mb-4">Workshop Info</span>
-            <h1 class="text-3xl md:text-4xl font-bold text-slate-900 mb-2">今日活動資訊</h1>
+            <h1 class="text-3xl md:text-4xl font-bold text-slate-900 mb-2">活動資訊</h1>
             <p class="text-lg text-slate-500">企業 Web3 實戰工作坊 · 區塊勢 × Dinngo</p>
         </header>
 
-        <!-- 今日場地與 Wi-Fi（置頂，避免忘記） -->
+        <!-- 場地與 Wi-Fi（置頂，避免忘記） -->
         <div class="grid md:grid-cols-2 gap-4 mb-6">
             <section class="bg-amber-50/70 rounded-xl border border-amber-200 p-4">
                 <h3 class="text-sm font-bold text-slate-600 mb-2 flex items-center gap-2">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
-                    今日場地
+                    場地
                 </h3>
                 <p class="font-bold text-slate-800 text-sm">集思台大會議中心 · 尼采廳（B1）</p>
             </section>
@@ -37,11 +37,11 @@
             </section>
         </div>
 
-        <!-- 今日時間表 -->
+        <!-- 時間表 -->
         <section class="bg-white rounded-2xl shadow-lg border-2 border-amber-200 p-6 md:p-10 mb-6">
             <h2 class="flex items-center gap-3 text-2xl font-bold text-slate-800 mb-6 border-l-4 border-amber-500 pl-4">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
-                今日時間表
+                時間表
             </h2>
             <div class="space-y-4">
                 <div class="flex gap-4 p-4 bg-amber-50 rounded-xl border border-amber-100">
