feat: 首頁副標題改為「從外行到坐上談判桌」
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 id: 1,
                 layout: 'cover',
                 title: "企業 Web3 工作坊",
-                subtitle: "加密貨幣在搞什麼鬼？用白話拆解加密貨幣",
+                subtitle: "從外行到坐上談判桌",
                 slidoUrl: "https://app.sli.do/event/v5E2ZdcCzhE9FHG2EfHh7z",
                 slidoCode: "web3"
             },
