feat: 講師介紹加入許明恩照片
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -63,29 +63,34 @@
                 tag: "講師介紹",
                 title: "許明恩",
                 content: (
-                    <div className="space-y-6 flex flex-col h-full justify-center">
-                        <div className="flex items-center gap-4 p-4 bg-amber-50 rounded-xl border border-amber-100">
-                            <p className="text-lg md:text-xl text-amber-900 font-bold">
-                                《區塊勢》創辦人 · 台大電子所碩士
-                            </p>
+                    <div className="flex flex-col md:flex-row gap-6 md:gap-10 h-full justify-center items-center">
+                        <div className="flex-shrink-0">
+                            <img src="https://duk.tw/3vKPbT.jpg" alt="許明恩" className="w-40 h-40 md:w-52 md:h-52 rounded-2xl object-cover shadow-lg border-2 border-slate-200" />
                         </div>
-                        <ul className="space-y-4">
-                            <li className="flex items-start">
-                                <span className="flex-shrink-0 bg-slate-800 text-white font-bold px-3 py-1 rounded text-base mr-4 mt-1">背書</span>
-                                <div>
-                                    <h4 className="text-xl font-bold text-slate-800 mb-1">受邀單位</h4>
-                                    <p className="text-lg text-slate-600">中央銀行、法官學院、TEDx</p>
-                                </div>
-                            </li>
-                            <li className="flex items-start">
-                                <span className="flex-shrink-0 bg-slate-800 text-white font-bold px-3 py-1 rounded text-base mr-4 mt-1">認證</span>
-                                <div>
-                                    <h4 className="text-xl font-bold text-slate-800 mb-1">Medium Top writer in Bitcoin</h4>
-                                    <p className="text-lg text-slate-600">富昇數位董事 · 2024 以太坊基金會 Devcon 學人</p>
-                                </div>
-                            </li>
-                        </ul>
-                        <p className="text-lg text-slate-500 italic">「我也不信」— 先承認質疑，與非幣圈聽眾站在同一邊</p>
+                        <div className="space-y-6 flex-1">
+                            <div className="p-4 bg-amber-50 rounded-xl border border-amber-100">
+                                <p className="text-lg md:text-xl text-amber-900 font-bold">
+                                    《區塊勢》創辦人 · 台大電子所碩士
+                                </p>
+                            </div>
+                            <ul className="space-y-4">
+                                <li className="flex items-start">
+                                    <span className="flex-shrink-0 bg-slate-800 text-white font-bold px-3 py-1 rounded text-base mr-4 mt-1">背書</span>
+                                    <div>
+                                        <h4 className="text-xl font-bold text-slate-800 mb-1">受邀單位</h4>
+                                        <p className="text-lg text-slate-600">中央銀行、法官學院、TEDx</p>
+                                    </div>
+                                </li>
+                                <li className="flex items-start">
+                                    <span className="flex-shrink-0 bg-slate-800 text-white font-bold px-3 py-1 rounded text-base mr-4 mt-1">認證</span>
+                                    <div>
+                                        <h4 className="text-xl font-bold text-slate-800 mb-1">Medium Top writer in Bitcoin</h4>
+                                        <p className="text-lg text-slate-600">富昇數位董事 · 2024 以太坊基金會 Devcon 學人</p>
+                                    </div>
+                                </li>
+                            </ul>
+                            <p className="text-lg text-slate-500 italic">「我也不信」— 先承認質疑，與非幣圈聽眾站在同一邊</p>
+                        </div>
                     </div>
                 )
             },
