feat: 講師介紹更新為核心身份、指標性職務與認證、指標性受邀與背書
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -70,19 +70,21 @@
                         <div className="space-y-6 flex-1">
                             <div className="p-4 bg-amber-50 rounded-xl border border-amber-100">
                                 <p className="text-lg md:text-xl text-amber-900 font-bold">
-                                    《區塊勢》創辦人 · 台大電子所碩士
+                                    《區塊勢》創辦人・台大電子所碩士
                                 </p>
                             </div>
-                            <ul className="space-y-4">
-                                <li>
-                                    <h4 className="text-xl font-bold text-slate-800 mb-1">受邀單位</h4>
-                                    <p className="text-lg text-slate-600">中央銀行、法官學院、TEDx</p>
-                                </li>
-                                <li>
-                                    <h4 className="text-xl font-bold text-slate-800 mb-1">Medium Top writer in Bitcoin</h4>
-                                    <p className="text-lg text-slate-600">富昇數位董事 · 2024 以太坊基金會 Devcon 學人</p>
-                                </li>
-                            </ul>
+                            <div>
+                                <h4 className="text-xl font-bold text-slate-800 mb-2">【指標性職務與認證】</h4>
+                                <ul className="space-y-1 text-lg text-slate-600">
+                                    <li>台灣大哥大子公司 董事</li>
+                                    <li>鏈上隱私工具 Fluidkey 顧問</li>
+                                    <li>以太坊基金會 2024 年入選學者</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h4 className="text-xl font-bold text-slate-800 mb-1">【指標性受邀與背書】</h4>
+                                <p className="text-lg text-slate-600">中央銀行、法官學院、TEDx 等指標性單位授課講師</p>
+                            </div>
                         </div>
                     </div>
                 )
