feat: 講師介紹區塊改為「兼任職務」「受邀演講」
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 </p>
                             </div>
                             <div>
-                                <h4 className="text-xl font-bold text-slate-800 mb-2">【指標性職務與認證】</h4>
+                                <h4 className="text-xl font-bold text-slate-800 mb-2">兼任職務</h4>
                                 <ul className="space-y-1 text-lg text-slate-600">
                                     <li>台灣大哥大子公司 董事</li>
                                     <li>鏈上隱私工具 Fluidkey 顧問</li>
@@ -82,7 +82,7 @@
                                 </ul>
                             </div>
                             <div>
-                                <h4 className="text-xl font-bold text-slate-800 mb-1">【指標性受邀與背書】</h4>
+                                <h4 className="text-xl font-bold text-slate-800 mb-1">受邀演講</h4>
                                 <p className="text-lg text-slate-600">中央銀行、法官學院、TEDx 等指標性單位授課講師</p>
                             </div>
                         </div>
