feat: 受邀演講改為金管會、中央銀行、司法官學院授課講師
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             </div>
                             <div>
                                 <h4 className="text-xl font-bold text-slate-800 mb-1">受邀演講</h4>
-                                <p className="text-lg text-slate-600">中央銀行、法官學院、TEDx 等指標性單位授課講師</p>
+                                <p className="text-lg text-slate-600">金管會、中央銀行、司法官學院授課講師</p>
                             </div>
                         </div>
                     </div>
